# minCaml.hs

./: .gitignore  .gitmodules  minCaml.cabal  minCaml.hs.cabal
execs/: Main.hs  Tests.hs
rts/: builtins.c  builtins.h
src/: Lexer.x  Main.hs  Parser.y  Tests.hs  Types.hs  Typing.hs
src/MinCaml/: AlphaConv.hs  ClosureConv.hs  KNormal.hs  Lexer.x  Parser.y  Types.hs  Typing.hs
src/MinCaml/Codegen/: C.hs  LLVM.hs
