name:                minCaml
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              osa1
maintainer:          omeragacan@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.8,
                       mtl >=2.1 && <2.3,
                       containers >=0.5 && <0.7,
                       array >=0.4 && <0.6,
                       syb >= 0.4 && < 0.5,
                       pretty >= 1.1 && < 1.2,
                       -- handling FFI parts in executable to be able
                       -- to load the lib in GHCi
                       llvm-general-pure >=3.4 && <3.5

  exposed-modules:     MinCaml.Types,
                       MinCaml.Typing,
                       MinCaml.Lexer,
                       MinCaml.Parser,
                       MinCaml.KNormal,
                       MinCaml.AlphaConv,
                       MinCaml.ClosureConv,
                       MinCaml.Codegen.C,
                       MinCaml.Codegen.LLVM
  -- other-modules:
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall -O

executable minCaml.hs
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8,
                       mtl >=2.1 && <2.3,
                       containers >=0.5 && <0.7,
                       minCaml == 0.1.0.0,
                       pretty >= 1.1 && < 1.2,
                       llvm-general >=3.4 && <3.5,
                       filepath,
                       safe

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall -O

Test-Suite minCaml-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.6 && <4.8,
                       mtl >=2.1 && <2.3,
                       containers >=0.5 && <0.7,
                       minCaml == 0.1.0.0,

                       tasty >=0.10 && <0.11,
                       tasty-hunit >=0.9 && <0.10,
                       directory,
                       filepath

  hs-source-dirs:      execs
  default-language:    Haskell2010
  ghc-options:         -Wall -O

